--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ input[type=number]::-webkit-inner-spin-button {
         align-items: center;
     }
     .menu-ul{
+        display: none;
         flex-direction: column;
         align-items: center;
     }
